--- a/uk.html
+++ b/uk.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141126533-1"></script>
     <script>
@@ -13,78 +14,107 @@
         gtag('config', 'UA-141126533-1');
     </script>
     <meta charset="utf-8">
-    <title>nometa</title>
+    <!--  <title>nometa</title> -->
+    <title>Будь-ласка, не запитуйте мета-запитання у чаті!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+        content="Мета-запитання — це запитання, котре має на увазі інші питання. Вони витрачають час! Як ваш, так і інших людей, які намагаються вам допомогти!">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="http://nometa.xyz">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Будь-ласка, не запитуйте мета-запитання у чаті!">
+    <meta property="og:description"
+        content="Мета-запитання — це запитання, котре має на увазі інші питання. Вони витрачають час! Як ваш, так і інших людей, які намагаються вам допомогти!">
+    <meta property="og:image" content="http://nometa.xyz/images/opengraph/uk/image.png">
+    <meta property="og:locale" content="uk-UA">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="nometa.xyz">
+    <meta property="twitter:url" content="http://nometa.xyz">
+    <meta name="twitter:title" content="Будь-ласка, не запитуйте мета-запитання у чаті!">
+    <meta name="twitter:description"
+        content="Мета-запитання — це запитання, котре має на увазі інші питання. Вони витрачають час! Як ваш, так і інших людей, які намагаються вам допомогти!">
+    <meta name="twitter:image" content="http://nometa.xyz/images/opengraph/uk/image.png">
     <link rel="stylesheet" media="screen" href="./main.css">
+</head>
+
 <body>
-<article>
-    <div class="internationalisation">
-        <a href="index.html">English version</a>
-        <a href="ru.html">Русская версия</a>
-        <a href="uz.html">O'zbek tili</a>
-    </div>
-    <h1>Будь-ласка, не запитуйте мета-запитання у чаті!</h1>
-
-    <p><b>Мета-запитання</b>— це запитання, котре має на увазі інші питання, наприклад:</p>
-
-    <div class="dialog-line -you">
-        <div class="content">
-            Чи можна поставити запитання?
+    <article>
+        <div class="internationalisation">
+            <a href="index.html">English version</a>
+            <a href="ru.html">Русская версия</a>
+            <a href="uz.html">O'zbek tili</a>
         </div>
-    </div>
+        <h1>Будь-ласка, не запитуйте мета-запитання у чаті!</h1>
 
-    <div class="dialog-line -you">
-        <div class="content">
-            Є, хто розуміється на N?
+        <p><b>Мета-запитання</b>— це запитання, котре має на увазі інші питання, наприклад:</p>
+
+        <div class="dialog-line -you">
+            <div class="content">
+                Чи можна поставити запитання?
+            </div>
         </div>
-    </div>
 
-    <div class="dialog-line -you">
-        <div class="content">
-            А хто тут проходив курс від Гугла на курсері? Є питання щодо аналізу тексту…
+        <div class="dialog-line -you">
+            <div class="content">
+                Є, хто розуміється на N?
+            </div>
         </div>
-    </div>
 
-    <div class="dialog-line -you">
-        <div class="content">
-            Хлопці, є питання по %framework_name
+        <div class="dialog-line -you">
+            <div class="content">
+                А хто тут проходив курс від Гугла на курсері? Є питання щодо аналізу тексту…
+            </div>
         </div>
-    </div>
 
-    <p class="quote"> — "Зрозуміло, але що поганого в цих питаннях і чому мені не варто їх ставити?"</p>
+        <div class="dialog-line -you">
+            <div class="content">
+                Хлопці, є питання по %framework_name
+            </div>
+        </div>
 
-    <p>— Вони витрачають час! Як ваш, так і інших людей, які намагаються вам допомогти! Ви намагаєтеся бути чемним, не
-        переходячи відразу до своєї проблеми, як люди роблять під час особистої зустрічі. Але чат – це зовсім інше. Люди
-        друкують
-        набагато повільніше, ніж розмовляють. Замість прояву ввічливості, ви змушуєте іншу людину чекати, поки
-        сформулюєте
-        питання, що призводить до втрати продуктивності.</p>
+        <p class="quote"> — "Зрозуміло, але що поганого в цих питаннях і чому мені не варто їх ставити?"</p>
 
-    <p>Те саме стосується таких повідомлень: <i>«Вітаю»</i>, <i>«Вітаю. Ти тут?»</i>, <i>«Є хвилинка?»</i>,
+        <p>— Вони витрачають час! Як ваш, так і інших людей, які намагаються вам допомогти! Ви намагаєтеся бути чемним,
+            не
+            переходячи відразу до своєї проблеми, як люди роблять під час особистої зустрічі. Але чат – це зовсім інше.
+            Люди
+            друкують
+            набагато повільніше, ніж розмовляють. Замість прояву ввічливості, ви змушуєте іншу людину чекати, поки
+            сформулюєте
+            питання, що призводить до втрати продуктивності.</p>
 
-        <i>«Пінг»</i>. Просто запитуйте!</p>
+        <p>Те саме стосується таких повідомлень: <i>«Вітаю»</i>, <i>«Вітаю. Ти тут?»</i>, <i>«Є хвилинка?»</i>,
 
-    <p>Якщо співрозмовник недоступний, а ви підете до того, як він повернеться,
-        він, як і раніше, може відповісти на запитання, замість того, щоб дивитися на ваш
-        <i>«Привіт»</i> і думати, що сталося.</p>
+            <i>«Пінг»</i>. Просто запитуйте!
+        </p>
 
-</article>
+        <p>Якщо співрозмовник недоступний, а ви підете до того, як він повернеться,
+            він, як і раніше, може відповісти на запитання, замість того, щоб дивитися на ваш
+            <i>«Привіт»</i> і думати, що сталося.
+        </p>
 
-<footer>
+    </article>
 
-    <div class="row">
-        Inspired by&nbsp;— <a href="http://www.nohello.com">www.nohello.com</a> (автор Brandon High), лінк на
-        <a href="https://github.com/leshark/nometa">
-            Гітхаб
-            <svg aria-hidden="true" id="octicon-icon" height="24" version="1.1" width="24">
-                <path fill-rule="evenodd"
-                      d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
-            </svg>
+    <footer>
 
-        </a>
-    </div>
+        <div class="row">
+            Inspired by&nbsp;— <a href="http://www.nohello.com">www.nohello.com</a> (автор Brandon High), лінк на
+            <a href="https://github.com/leshark/nometa">
+                Гітхаб
+                <svg aria-hidden="true" id="octicon-icon" height="24" version="1.1" width="24">
+                    <path fill-rule="evenodd"
+                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z">
+                    </path>
+                </svg>
 
-</footer>
+            </a>
+        </div>
+
+    </footer>
 
 </body>
+
 </html>
