--- a/uz.html
+++ b/uz.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="uz">
+
 <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141126533-1"></script>
     <script>
@@ -13,86 +14,119 @@
         gtag('config', 'UA-141126533-1');
     </script>
     <meta charset="utf-8">
-    <title>nometa</title>
+    <!-- <title>nometa</title> -->
+    <title>Iltimos, chatda meta-savollar bermang!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+        content="Meta-savol — bu boshqa savollarni nazarda tutuvchi savol. Ular vaqtni behuda sarflashadi! Siz ham, sizga yordam berishga harakat qilayotgan boshqa odamlar ham!">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="http://nometa.xyz">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Iltimos, chatda meta-savollar bermang!">
+    <meta property="og:description"
+        content="Meta-savol — bu boshqa savollarni nazarda tutuvchi savol. Ular vaqtni behuda sarflashadi! Siz ham, sizga yordam berishga harakat qilayotgan boshqa odamlar ham!">
+    <meta property="og:image" content="http://nometa.xyz/bad-good-uz.png">
+    <!-- <meta property="og:locale" content="uz"> -->
+
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="nometa.xyz">
+    <meta property="twitter:url" content="http://nometa.xyz">
+    <meta name="twitter:title" content="Iltimos, chatda meta-savollar bermang!">
+    <meta name="twitter:description"
+        content="Meta-savol — bu boshqa savollarni nazarda tutuvchi savol. Ular vaqtni behuda sarflashadi! Siz ham, sizga yordam berishga harakat qilayotgan boshqa odamlar ham!">
+    <meta name="twitter:image" content="http://nometa.xyz/bad-good-uz.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" media="screen" href="./main.css">
+
 <body>
-<article>
-    <div class="internationalisation">
-        <a href="index.html">English version</a>
-        <a href="uk.html">Українська версія</a>
-        <a href="ru.html">Русская версия</a>
-    </div>
-    <h1>Iltimos, chatda meta-savollar bermang!</h1>
-
-    <p><b>Meta-savol</b> — bu boshqa savollarni nazarda tutuvchi savol, masalan:</p>
-
-    <div class="dialog-line -you">
-        <div class="content">
-            Savol bersam maylimi?
+    <article>
+        <div class="internationalisation">
+            <a href="index.html">English version</a>
+            <a href="uk.html">Українська версія</a>
+            <a href="ru.html">Русская версия</a>
         </div>
-    </div>
+        <h1>Iltimos, chatda meta-savollar bermang!</h1>
 
-    <div class="dialog-line -you">
-        <div class="content">
-            N ga tushunadiganlar bormi?
+        <p><b>Meta-savol</b> — bu boshqa savollarni nazarda tutuvchi savol, masalan:</p>
+
+        <div class="dialog-line -you">
+            <div class="content">
+                Savol bersam maylimi?
+            </div>
         </div>
-    </div>
 
-    <div class="dialog-line -you">
-        <div class="content">
-            Bu yerda kimdir Yandexdan kurs sotib olganmi? Menda matn tahlili bo'yicha savollar bor...
+        <div class="dialog-line -you">
+            <div class="content">
+                N ga tushunadiganlar bormi?
+            </div>
         </div>
-    </div>
 
-    <div class="dialog-line -you">
-        <div class="content">
-            Akalar, %framework_name% haqida savolim bor edi
+        <div class="dialog-line -you">
+            <div class="content">
+                Bu yerda kimdir Yandexdan kurs sotib olganmi? Menda matn tahlili bo'yicha savollar bor...
+            </div>
         </div>
-    </div>
 
-    <p class="quote"> — «Tushunarli, lekin bu savollarda nima yomonlik bor va nega men ularni so'ramasligim kerak?»</p>
+        <div class="dialog-line -you">
+            <div class="content">
+                Akalar, %framework_name% haqida savolim bor edi
+            </div>
+        </div>
 
-    <p>— Ular vaqtni behuda sarflashadi! Siz ham, sizga yordam berishga harakat qilayotgan boshqa odamlar ham!
-        Siz odamlar bilan yuzma-yuz bo'lganingiz kabi, muammoingizga to'g'ridan-to'g'ri murojaat qilmasdan muloyim bo'lishga
-        harakat qilasiz. Ammo bu suhbat butunlay boshqacha. Odamlar gapirgandan ko'ra sekinroq yozadilar. Xushmuomalalik
-        ko'rsatish o'rniga, siz boshqa odamni savol shakllantirilishini kutishga majbur qilasiz, bu esa unumdorlikni
-        yo'qotishiga olib keladi.</p>
+        <p class="quote"> — «Tushunarli, lekin bu savollarda nima yomonlik bor va nega men ularni so'ramasligim kerak?»
+        </p>
 
-    <p>Xuddi shu narsa ushbu habarlarga ham tegishli: <i>«Salom»</i>, <i>«Assalomu alaykum»</i>, <i>«Salom, kimdir bormi?»</i>,
-        <i>«Vaqtingiz bormi?»</i>, <i>«Ping»</i>. Shunchaki savol bering!</p>
+        <p>— Ular vaqtni behuda sarflashadi! Siz ham, sizga yordam berishga harakat qilayotgan boshqa odamlar ham!
+            Siz odamlar bilan yuzma-yuz bo'lganingiz kabi, muammoingizga to'g'ridan-to'g'ri murojaat qilmasdan muloyim
+            bo'lishga
+            harakat qilasiz. Ammo bu suhbat butunlay boshqacha. Odamlar gapirgandan ko'ra sekinroq yozadilar.
+            Xushmuomalalik
+            ko'rsatish o'rniga, siz boshqa odamni savol shakllantirilishini kutishga majbur qilasiz, bu esa unumdorlikni
+            yo'qotishiga olib keladi.</p>
 
-    <p>Bundan tashqari, siz darhol savol berganingizda, "asinxron" - o'zaro ta'sir qilish imkoniyati ochiladi. Agar boshqa
-        odam bo'lmasa va siz javob berishdan oldin ketsangiz, ular sizning "Salom" ga qarash va nima bo'lganini o'ylash
-        o'rniga savolingizga javob berishlari mumkin.</p>
+        <p>Xuddi shu narsa ushbu habarlarga ham tegishli: <i>«Salom»</i>, <i>«Assalomu alaykum»</i>, <i>«Salom, kimdir
+                bormi?»</i>,
+            <i>«Vaqtingiz bormi?»</i>, <i>«Ping»</i>. Shunchaki savol bering!
+        </p>
 
-    <p>Barchasi bir rasmda: </p>
+        <p>Bundan tashqari, siz darhol savol berganingizda, "asinxron" - o'zaro ta'sir qilish imkoniyati ochiladi. Agar
+            boshqa
+            odam bo'lmasa va siz javob berishdan oldin ketsangiz, ular sizning "Salom" ga qarash va nima bo'lganini
+            o'ylash
+            o'rniga savolingizga javob berishlari mumkin.</p>
 
-    <img src="./bad-good-uz.png"
-         alt="Chaqaloq otasi oldiga keldi va otasidan so'radi: 'Nega meta-savollar juda yomon?'">
+        <p>Barchasi bir rasmda: </p>
 
-</article>
+        <img src="./bad-good-uz.png"
+            alt="Chaqaloq otasi oldiga keldi va otasidan so'radi: 'Nega meta-savollar juda yomon?'">
 
-<footer>
+    </article>
 
-    <div class="row">
-        Inspired by&nbsp;— <a href="http://www.nohello.com">www.nohello.com</a> (автор Brandon High), линк на
-        <a href="https://github.com/leshark/nometa">
-            Гитхаб
-            <svg aria-hidden="true" id="octicon-icon" height="24" version="1.1" width="24">
-                <path fill-rule="evenodd"
-                      d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
-            </svg>
-        </a>
-    </div>
-    <div class="row">
-        <a href="index.html">EN</a>
-        <a href="ru.html">RU</a>
-        <a href="uk.html">UK</a>
-        <a href="uz.html">UZ</a>
-    </div>
+    <footer>
 
-</footer>
+        <div class="row">
+            Inspired by&nbsp;— <a href="http://www.nohello.com">www.nohello.com</a> (автор Brandon High), линк на
+            <a href="https://github.com/leshark/nometa">
+                Гитхаб
+                <svg aria-hidden="true" id="octicon-icon" height="24" version="1.1" width="24">
+                    <path fill-rule="evenodd"
+                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z">
+                    </path>
+                </svg>
+            </a>
+        </div>
+        <div class="row">
+            <a href="index.html">EN</a>
+            <a href="ru.html">RU</a>
+            <a href="uk.html">UK</a>
+            <a href="uz.html">UZ</a>
+        </div>
+
+    </footer>
 
 </body>
+
 </html>
