--- a/ru.html
+++ b/ru.html
@@ -22,6 +22,7 @@
         <a href="index.html?redirect=0">English version</a>
         <a href="uk.html">Українська версія</a>
         <a href="uz.html">O'zbek tili</a>
+        <a href="kaa.html">Qaraqalpaq tili</a>
     </div>
     <h1>Пожалуйста, не задавайте мета-вопросов в чате!</h1>
 
@@ -89,6 +90,7 @@
         <a href="ru.html">RU</a>
         <a href="uk.html">UK</a>
         <a href="uz.html">UZ</a>
+        <a href="kaa.html">KAA</a>
     </div>
 
 </footer>
