--- a/uk.html
+++ b/uk.html
@@ -22,6 +22,7 @@
         <a href="index.html?redirect=0">English version</a>
         <a href="ru.html">Русская версия</a>
         <a href="uz.html">O'zbek tili</a>
+        <a href="kaa.html">Qaraqalpaq tili</a>
     </div>
     <h1>Будь-ласка, не запитуйте мета-запитання у чаті!</h1>
 
